--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,8 @@
-<% provide :title, t(".title") %>
-<h1><%= t ".sample_app" %></h1>
-<p>
-  <%= t(".content_html", href: link_to(t(".href_title"), Settings.links.rail_tutorial_link)) %>
-</p>
+<div class="center jumbotron">
+  <h1><%= t ".sample_app" %></h1>
+  <h2>
+    <%= t(".content_html", href: link_to(t(".href_title"), Settings.links.rail_tutorial_link)) %>
+  </h2>
+<%= link_to t(".sign_up"), "#", class: "btn btn-lg btn-primary" %>
+</div>
+<%= link_to image_tag("ruby_logo.jpg", alt: "Rails logo", width: "200px"), "/assets/images/ruby_logo.jpg" %>
