--- a/app/assets/stylesheets/abstracts/variables.scss
+++ b/app/assets/stylesheets/abstracts/variables.scss
@@ -3,3 +3,19 @@ $gray-light: #777;
 $gray: #555;
 $gray_darker: #555;
 $gray-medium-light: #eaeaea;
+$state-danger-text: rgb(247, 12, 12);
+
+@mixin box_sizing {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+/* miscellaneous */
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
+}
