--- a/app/assets/stylesheets/abstracts/variables.scss
+++ b/app/assets/stylesheets/abstracts/variables.scss
@@ -3,7 +3,10 @@ $gray-light: #777;
 $gray: #555;
 $gray_darker: #555;
 $gray-medium-light: #eaeaea;
+$gray-medium: #bbb;
 $state-danger-text: rgb(247, 12, 12);
+$red: red;
+$white: white;
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
