--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -44,7 +44,7 @@ input,
 textarea,
 select,
 .uneditable-input {
-  border: 1px solid #bbb;
+  border: 1px solid $gray-medium;
   width: 100%;
   margin-bottom: 15px;
   @include box_sizing;
@@ -59,10 +59,10 @@ input {
 }
 
 #error_explanation {
-  color: red;
+  color: $red;
 
   ul {
-    color: red;
+    color: $red;
     margin: 0 0 30px 0;
   }
 }
