--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,8 +5,23 @@
     </ul>
     <ul class="navbar-nav ml-auto my-2 my-lg-0 mr-3">
       <li class="nav-item"><%= link_to t(".help"), help_path , class: "nav-link"%></li>
-      <li class="nav-item"><%= link_to t(".login"), "#", class: "nav-link" %></li>
-      <li class="nav-item dropdown">
+      <% if logged_in? %>
+        <li class="nav-item"><%= link_to t(".users"), "#", class: "nav-link" %></li>
+        <li class="nav-item dropdown">
+          <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" > <%= t ".account" %><b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><%= link_to t(".profile"), user_path(locale, current_user), class: "dropdown-item" %></li>
+            <li><%= link_to t(".settings"), "#", class: "dropdown-item" %></li>
+            <li class="divider"></li>
+            <li>
+              <%= link_to t(".log_out"), logout_path, method: :delete, class: "dropdown-item" %> </li>
+          </ul>
+        </li>
+      <% else %>
+        <li class="nav-item"><%= link_to t(".login"), login_path(locale), class: "nav-link" %></li>
+      <% end %>
+       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <%= t ".languages" %>
         </a>
