--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -10,7 +10,7 @@
       <%= f.password_field :password, class: "form-control" %> 
 
       <%= f.label :password_confirmation, t(".confirmation") %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
+      <%= f.password_field :password_confirmation, class: "form-control" %>
 
       <%= f.submit t(".submit"), class: "btn btn-primary" %> 
     <% end %>
