--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,25 @@
-<div class="center jumbotron">
-  <h1><%= t ".sample_app" %></h1>
-  <h2>
-    <%= t(".content_html", href: link_to(t(".href_title"), Settings.links.rail_tutorial_link)) %>
-  </h2>
-<%= link_to t(".sign_up"), signup_path, class: "btn btn-lg btn-primary" %>
-</div>
-<%= link_to image_tag("ruby_logo.jpg", alt: "Rails logo", width: "200px"), "/assets/images/ruby_logo.jpg" %>
+<% if logged_in? %> 
+  <div class="row">
+    <aside class="col-md-4"> 
+      <section class="user_info">
+        <%= render "shared/user_info" %>
+      </section>
+      <section class="micropost_form">
+        <%= render "shared/micropost_form" %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3><%= t ".micropost_feed" %></h3>
+      <%= render "shared/feed" %> 
+    </div>
+  </div>
+<% else %>
+  <div class="center jumbotron">
+    <h1><%= t ".sample_app" %></h1>
+    <h2>
+      <%= t(".content_html", href: link_to(t(".href_title"), Settings.links.rail_tutorial_link)) %>
+    </h2>
+    <%= link_to t(".sign_up"), signup_path, class: "btn btn-lg btn-primary" %>
+  </div>
+  <%= link_to image_tag(Settings.logo_name, alt: "Rails logo", width: Settings.logo_size), Settings.logo_link %>
+<% end %>
