--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,8 +1,8 @@
 <% users.each do |user| %>
   <li>
-    <%= gravatar_for user, size: 50 %>
+    <%= gravatar_for user, size: Settings.avatar_size %>
     <%= link_to user.name, user %>
-    <% if current_user.admin? && !current_user?(user) %>
+    <% if current_user&.admin? && !current_user?(user) %>
     | <%= link_to t(".delete"), user, method: :delete,
         data: { confirm: t(".confirm") } %>
     <% end %>
