--- a/app/assets/stylesheets/abstracts/variables.scss
+++ b/app/assets/stylesheets/abstracts/variables.scss
@@ -7,6 +7,7 @@ $gray-medium: #bbb;
 $state-danger-text: rgb(247, 12, 12);
 $red: red;
 $white: white;
+$blue: blue;
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
